--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.4",
-    "fitty": "^2.3.6"
+    "fitty": "^2.3.6",
+    "node-forge": "^1.3.1"
   },
   "devDependencies": {
     "nw": "^0.63.0-sdk",
