Added speakeasy and qrcode packages for MFA

--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
