--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "crypto-js": "^4.1.1",
     "firebase": "^9.6.4",
     "fitty": "^2.3.6",
-    "node-forge": "^1.3.1"
+    "node-forge": "^1.3.1",
+    "qrcode": "^1.5.0",
+    "speakeasy": "^2.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "nw": "^0.63.1-sdk",
