Converting to react

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+build/
+
 # Dependency directories
 node_modules/
 jspm_packages/
@@ -55,6 +57,8 @@ typings/
 
 # Optional eslint cache
 .eslintcache
+
+cache/
 
 # Microbundle cache
 .rpt2_cache/
