--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
+    "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -14,11 +15,13 @@
   "main": "index.js",
   "dependencies": {
     "crypto-js": "^4.1.1",
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.18.0",
     "speakeasy": "^2.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
