--- a/package.json
+++ b/package.json
@@ -1,25 +1,55 @@
 {
-  "name": "personal-password-manager",
-  "version": "1.0.0",
-  "description": "A password manager gui made with firebase",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nw src/",
-    "prod": "nwbuild --platforms win32,win64,osx64,linux32,linux64 --buildDir dist/ src/",
-    "reinstall": "rm -rf node_modules/ && rm -rf package-lock.json && npm i"
-  },
-  "author": "Roni Daou",
+  "name": "personal-pm",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "crypto-js": "^4.1.1",
-    "firebase": "^9.6.4",
-    "fitty": "^2.3.6",
-    "node-forge": "^1.3.1",
-    "qrcode": "^1.5.0",
-    "speakeasy": "^2.0.0",
-    "zxcvbn": "^4.4.2"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "firebase": "^9.8.3",
+    "firebase-tools": "^11.1.0",
+    "nw-react-scripts": "4.0.4",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "web-vitals": "^1.1.2"
   },
-  "devDependencies": {
-    "nw": "^0.63.1-sdk",
-    "nw-builder": "^3.5.7"
+  "scripts": {
+    "start": "nw-react-scripts start",
+    "build": "nw-react-scripts build",
+    "test": "nw-react-scripts test",
+    "eject": "nw-react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "nw-react-app",
+      "nw-react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "main": "index.html",
+  "nwBuilder": {
+    "//": "https://github.com/nwjs-community/nw-builder",
+    "platforms": [
+      "osx64",
+      "win32",
+      "win64"
+    ],
+    "version": "latest",
+    "flavor": "normal",
+    "buildDir": "./build",
+    "cacheDir": "./cache",
+    "macIcns": "./src/logo.icns"
   }
 }
