--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,8 @@
     "crypto-js": "^4.1.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.1",
     "speakeasy": "^2.0.0"
   },
   "devDependencies": {
