--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "concurrently": "^7.2.2",
     "firebase": "^9.8.4",
     "nw": "0.66.0-sdk",
-    "qrcode": "^1.5.0",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-devtools": "^4.24.7",
     "react-dom": "^18.2.0",
@@ -55,5 +55,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
+    "favicongrab": "^1.0.0",
+    "node-fetch": "^3.2.10",
+    "otplib": "^12.0.1",
+    "react-firebase-hooks": "^5.0.3",
+    "react-icons": "^4.4.0",
+    "react-spring": "^9.5.4",
+    "speakeasy": "^2.0.0",
+    "zxcvbn": "^4.4.2"
   }
 }
