--- a/package.json
+++ b/package.json
@@ -1,45 +1,36 @@
 {
   "name": "personal-password-manager",
   "version": "0.1.0",
-  "main": "main.js",
-  "homepage": ".",
-  "node-remote": [
-    "http://localhost:3042",
-    "file://*"
-  ],
   "private": true,
+  "main": "./index.html",
   "devDependencies": {
-    "@otplib/preset-browser": "^12.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "concurrently": "^7.2.2",
-    "nw": "0.66.0-sdk",
+    "nw-builder": "^4.0.0-rc.8",
     "react": "^18.2.0",
     "react-devtools": "^4.24.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "wait-on": "^6.0.1",
+    "serve": "^14.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3042 && set NWJS_START_URL=http://localhost:3042 && nw --enable-logging=stderr .\"",
-    "dev-tools": "concurrently \"react-devtools\" \"set REACT_APP_DEVTOOLS=enabled && npm start\" \"wait-on http://localhost:3042 && set NWJS_START_URL=http://localhost:3042 && nw --enable-logging=stderr .\"",
-    "dev:linux": "concurrently \"export REACT_APP_DEVTOOLS=enabled; npm start\" \"wait-on http://localhost:3042 && export NWJS_START_URL=http://localhost:3042; nw --enable-logging=stderr --remote-debugging-port=3043 .\"",
-    "dev-tools:linux": "concurrently \"react-devtools\" \"npm start\" \"wait-on http://localhost:3042 && export NWJS_START_URL=http://localhost:3042; nw --enable-logging=stderr .\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "bld:web": "npm run build",
+    "bld:pkgJson": "cp nw.pkg.json ./build/package.json",
+    "bld:nw": "nwbuild ./build --version=0.70.1 --flavour=sdk --platform=win --arch=x64 --outDir=./out",
+    "bld": "npm run bld:web && npm run bld:pkgJson && npm run bld:nw"
   },
   "eslintConfig": {
     "globals": {
       "nw": true
     },
     "extends": [
-      "react-app",
-      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -54,6 +45,7 @@
       "last 1 safari version"
     ]
   },
+  "chromium-args": "--enable-logging=stderr",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
@@ -61,13 +53,10 @@
     "crypto-js": "^4.1.1",
     "favicongrab": "^1.0.0",
     "firebase": "^9.14.0",
-    "node-fetch": "^3.2.10",
-    "otplib": "^12.0.1",
     "qrcode": "^1.5.1",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-spring": "^9.5.4",
-    "speakeasy": "^2.0.0",
     "zxcvbn": "^4.4.2"
   }
 }
