--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "concurrently": "^7.2.2",
-    "nw": "0.66.0-sdk",
+    "nw": "^0.66.0-sdk",
     "react": "^18.2.0",
     "react-devtools": "^4.24.7",
+    "concurrently": "^7.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
