Fixed icon, working on autolock

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
       "name",
       "version",
       "main",
-      "node-remote", "build"
+      "node-remote",
+      "window"
     ],
     "osTypes": [
       "windows"
