--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
-    "appdmg": "^0.6.4",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
     "nw": "0.70.1-sdk",
@@ -47,6 +46,9 @@
     "react-router-dom": "^6.4.3",
     "react-spring": "^9.5.4",
     "zxcvbn": "^4.4.2"
+  },
+  "optionalDependencies": {
+    "appdmg": "^0.6.4"
   },
   "build": {
     "manifestProps": [
