--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "qrcode": "^1.5.1",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.4.3",
     "react-spring": "^9.5.4",
     "zxcvbn": "^4.4.2"
