--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^7.0.3",
     "nw": "0.70.1-sdk",
     "nw-builder": "^4.0.2",
+    "portfinder": "^1.0.32",
     "react": "^18.2.0",
     "react-devtools": "^4.26.1",
     "react-dom": "^18.2.0",
