--- a/package.json
+++ b/package.json
@@ -47,10 +47,8 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.4.3",
     "react-spring": "^9.5.4",
+    "appdmg": "^0.6.4",
     "zxcvbn": "^4.4.2"
-  },
-  "optionalDependencies": {
-    "appdmg": "^0.6.4"
   },
   "build": {
     "manifestProps": [
